Fix portable event on setting confirmation status
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>